--- a/index.html
+++ b/index.html
@@ -245,18 +245,20 @@
                     <h2 class="accordion-header" id="headingOne">
                         <button class="accordion-button" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                            Accordion Item #1
+                            What are the difference between flexbox and grid?
                         </button>
                     </h2>
                     <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <strong>This is the first item's accordion body.</strong> It is shown by default, until the
-                            collapse plugin adds the appropriate classes that we use to style each element. These
-                            classes control the overall appearance, as well as the showing and hiding via CSS
-                            transitions. You can modify any of this with custom CSS or overriding our default variables.
-                            It's also worth noting that just about any HTML can go within the
-                            <code>.accordion-body</code>, though the transition does limit overflow.
+                            The basic difference between CSS Grid Layout and CSS Flexbox Layout is that <strong>flexbox
+                                was designed for layout in one dimension - either a row or a column.</strong> Grid was
+                            designed for two-dimensional layout - rows, and columns at the same time. Grid is made for
+                            two-dimensional layout while Flexbox is for one. This means Flexbox can work on either row
+                            or columns at a time, but Grids can work on both.
+                            Flexbox, gives you more flexibility while working on either element (row or column). HTML
+                            markup and CSS will be easy to manage in this type of scenario.
+                            GRID gives you more flexibility to move around the blocks irrespective of your HTML markup.
                         </div>
                     </div>
                 </div>
@@ -264,18 +266,16 @@
                     <h2 class="accordion-header" id="headingTwo">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                            Accordion Item #2
+                            What are the difference between bootstrap and tailwind?
                         </button>
                     </h2>
                     <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <strong>This is the second item's accordion body.</strong> It is hidden by default, until
-                            the collapse plugin adds the appropriate classes that we use to style each element. These
-                            classes control the overall appearance, as well as the showing and hiding via CSS
-                            transitions. You can modify any of this with custom CSS or overriding our default variables.
-                            It's also worth noting that just about any HTML can go within the
-                            <code>.accordion-body</code>, though the transition does limit overflow.
+                            Bootstrap comes with a set of pre-styled responsive, mobile-first components that possess a
+                            definite UI kit. Tailwind CSS uses a set of utility classes to create a neat UI with more
+                            flexibility and uniqueness. Sites created using Bootstrap follow the generic pattern that
+                            makes them look identical.
                         </div>
                     </div>
                 </div>
@@ -283,18 +283,15 @@
                     <h2 class="accordion-header" id="headingTwo">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                            Accordion Item #2
+                            What is css box model?
                         </button>
                     </h2>
                     <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <strong>This is the second item's accordion body.</strong> It is hidden by default, until
-                            the collapse plugin adds the appropriate classes that we use to style each element. These
-                            classes control the overall appearance, as well as the showing and hiding via CSS
-                            transitions. You can modify any of this with custom CSS or overriding our default variables.
-                            It's also worth noting that just about any HTML can go within the
-                            <code>.accordion-body</code>, though the transition does limit overflow.
+                            In CSS box model is used when talking about design and layout. The CSS box model is
+                            essentially a box that wraps around every HTML element. <strong>It consists of: margins,
+                                borders, padding, and the actual content.</strong>
                         </div>
                     </div>
                 </div>
@@ -302,24 +299,34 @@
                     <h2 class="accordion-header" id="headingThree">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                            Accordion Item #3
+                            What is semantic tag?
                         </button>
                     </h2>
                     <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the
-                            collapse plugin adds the appropriate classes that we use to style each element. These
-                            classes control the overall appearance, as well as the showing and hiding via CSS
-                            transitions. You can modify any of this with custom CSS or overriding our default variables.
-                            It's also worth noting that just about any HTML can go within the
-                            <code>.accordion-body</code>, though the transition does limit overflow.
+                            The HTML semantics refers to <strong>the tags that provide meaning to an HTML page rather
+                                than just presentation.</strong> It makes HTML more comprehensible by better defining
+                            the different sections and layout of web pages.
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <!-- Trusted Companies -->
+    <div class="trusted-companies" md-5>
+        <h1 class="text-center">Trusted By Over 800+ Compnies</h1>
+        <div class="d-flex justify-content-around">
+            <img src="/edTech-website-main/images/company/company-1.png" class="rounded float-start" alt="...">
+            <img src="/edTech-website-main/images/company/company-2.png" class="rounded float-end" alt="...">
+            <img src="/edTech-website-main/images/company/company-3.png" class="rounded float-start" alt="...">
+            <img src="/edTech-website-main/images/company/company-4.png" class="rounded float-end" alt="...">
+            <img src="/edTech-website-main/images/company/company-5.png" class="rounded float-start" alt="...">
+            <img src="/edTech-website-main/images/company/company-6.png" class="rounded float-end" alt="...">
+        </div>
+    </div>
+
     <!-- footer -->
     <footer>
         <div class="footerText">
