--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </nav>
     </header>
     <!-- Cover Photo-->
-    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+    <div id="carouselExampleCaptions container" class="carousel slide m-5 " data-bs-ride="false">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
                 aria-current="true" aria-label="Slide 1"></button>
@@ -63,8 +63,9 @@
             <div class="carousel-item active">
                 <img src="/edTech-website-main/images/cover/cover-1.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5 class="fs-1">Get Started Digital</h5>
-                    <p class="fs-1">Learning.</p>
+                    <h5 class="fs-1">Get Started Digital Learning.</h5>
+                    <p>It is a long stablished fact that a reader will be distracted by the readable comnent of a page
+                        when looking at it's layout.</p>
                     <button type="button" class="btn btn-primary">Get Started</button>
                 </div>
             </div>
@@ -72,14 +73,16 @@
                 <img src="/edTech-website-main/images/cover/cover-2.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Second slide label</h5>
-                    <p>Some representative placeholder content for the second slide.</p>
+                    <p>It is a long stablished fact that a reader will be distracted by the readable comnent of a page
+                        when looking at it's layout.</p>
                 </div>
             </div>
             <div class="carousel-item">
                 <img src="/edTech-website-main/images/cover/cover-3.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Third slide label</h5>
-                    <p>Some representative placeholder content for the third slide.</p>
+                    <p>It is a long stablished fact that a reader will be distracted by the readable comnent of a page
+                        when looking at it's layout.</p>
                 </div>
             </div>
         </div>
@@ -99,9 +102,9 @@
     <div class="discovertext">
         <h2 class="text-center fw-bold">Discover Our Popular</h2>
         <h2 class="text-center fw-bold">Courses</h2>
-        <p class="text-center text-black-50 fw-bold">It is a long established fact that a reader will be distracted by
-            the
-            readable</p>
+        <p class="text-center text-black-50 fw-bold">It is a long stablished fact that a reader will be distracted by
+            the readable comnent of a page
+            when looking at it's layout.</p>
     </div>
     <!-- Card TAG -->
     <!-- <div class="container text-center"> -->
@@ -115,10 +118,10 @@
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title">Fundamental of UI/UX Design</h5>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                                 additional content. This content is a little bit longer.</p>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            <p class="card-text"><small class="text-primary fw-bold">Price: $20</small></p>
                         </div>
                     </div>
                 </div>
@@ -131,10 +134,10 @@
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title">Javascript basic to advanced</h5>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                                 additional content. This content is a little bit longer.</p>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            <p class="card-text"><small class="text-primary fw-bold">Price: $20</small></p>
                         </div>
                     </div>
                 </div>
@@ -149,10 +152,10 @@
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title">Fullstack Web Development</h5>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                                 additional content. This content is a little bit longer.</p>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            <p class="card-text"><small class="text-primary fw-bold">Price: $20</small></p>
                         </div>
                     </div>
                 </div>
@@ -165,10 +168,10 @@
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title">Digital Marketing</h5>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                                 additional content. This content is a little bit longer.</p>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            <p class="card-text"><small class="text-primary fw-bold">Price: $20</small></p>
                         </div>
                     </div>
                 </div>
@@ -178,15 +181,15 @@
             <div class="card mb-3" style="max-width: 540px;">
                 <div class="row g-3">
                     <div class="col-md-4">
-                        <img src="/edTech-website-main/images/course/course-5.png" class="img-fluid rounded-start"
+                        <img src="./edTech-website-main//images/course//course-5.png" class="img-fluid rounded-start"
                             alt="...">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title">Digital Marketing</h5>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                                 additional content. This content is a little bit longer.</p>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            <p class="card-text"><small class="text-primary fw-bold">Price: $20</small></p>
                         </div>
                     </div>
                 </div>
@@ -199,10 +202,10 @@
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title">Motion Graphics</h5>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                                 additional content. This content is a little bit longer.</p>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            <p class="card-text"><small class=" text-primary fw-bold">Price: $20</small></p>
                         </div>
                     </div>
                 </div>
@@ -226,7 +229,7 @@
     </div>
 
     <!-- Freequently Asked Questions -->
-    <div class="discovertext">
+    <div class="discovertext container">
         <h2 class="text-center fw-bold">Frequently Asked Questions</h2>
         <div class="text-center">
             <div>
@@ -315,9 +318,9 @@
         </div>
     </div>
     <!-- Trusted Companies -->
-    <div class="trusted-companies" md-5>
+    <div class="trusted-companies container mb-5 mt-3 container" md-5>
         <h1 class="text-center">Trusted By Over 800+ Compnies</h1>
-        <div class="d-flex justify-content-around">
+        <div class="d-flex justify-content-around banner">
             <img src="/edTech-website-main/images/company/company-1.png" class="rounded float-start" alt="...">
             <img src="/edTech-website-main/images/company/company-2.png" class="rounded float-end" alt="...">
             <img src="/edTech-website-main/images/company/company-3.png" class="rounded float-start" alt="...">
@@ -328,7 +331,7 @@
     </div>
 
     <!-- footer -->
-    <footer>
+    <footer class="container">
         <div class="footerText">
             <h1>Pro Edu</h1>
             <p>Office 41, Zawaya Buldin, Ghala Muscar</p>
