modal info added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <nav class="navbar-expand-lg navbar navbar-dark bg-primary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Pro Edu</a>
+                <a class="navbar-brand" href="#">Digital Learning</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -219,7 +219,7 @@
         <div class="row p-5">
             <div class="col-8 text-start">
                 <h2 class="text-white">Ready to Join?</h2>
-                <p class="text-white">Paragrarh Paragrarh Paragrarh Paragrarh Paragrarh</p>
+                <p class="text-white">Please go through all features of courses & then register.</p>
             </div>
             <div class="col-4">
                 <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal"
