social-link-added

--- a/index.html
+++ b/index.html
@@ -360,17 +360,14 @@
             <p>Sultanate of Oman</p>
             <p>Privacy Policy | Terms of use</p>
             <div>
-                <a class="fbicon" href="">
+                <a class="fbicon" href="https://www.facebook.com/jamil.ifteakhar">
                     <ion-icon name="logo-facebook"></ion-icon>
                 </a>
-                <a class="fbicon" href="">
-                    <ion-icon name="logo-twitter"></ion-icon>
+                <a class="fbicon" href="https://www.instagram.com/jamil_ifteakhar_emon/">
+                    <ion-icon name="logo-instagram"></ion-icon>
                 </a>
-                <a class="fbicon" href="">
-                    <ion-icon name="logo-linkedin"></ion-icon>
-                </a>
-                <a class="fbicon" href="">
-                    <ion-icon name="logo-tiktok"></ion-icon>
+                <a class="fbicon" href="https://github.com/Jamil-Emon">
+                    <ion-icon name="logo-github"></ion-icon>
                 </a>
             </div>
         </div>
