--- a/index.html
+++ b/index.html
@@ -252,16 +252,13 @@
 
     <!-- Freequently Asked Questions -->
     <div class="discovertext container">
-        <h2 class="text-center fw-bold">Frequently Asked Questions</h2>
+        <h2 class="text-center fw-bold">FFrequently Asked Questions</h2>
         <div class="text-center">
             <div>
-                <small class="text-center text-black-50 fw-bold">It is a long established fact that a reader will be
-                    distracted
-                    by the
-                    readable</small>
+                <small class="text-center text-black-50 fw-bold">All relative questions are here</small>
             </div>
             <div>
-                <small class="text-black-50 fw-bold">content of a page when looking at its layout.</small>
+                <!-- <small class="text-black-50 fw-bold">content of a page when looking at its layout.</small> -->
             </div>
         </div>
         <div class="container">
@@ -307,11 +304,11 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingTwo">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            data-bs-target="#collapseTwoo" aria-expanded="false" aria-controls="collapseTwoo">
                             What is css box model?
                         </button>
                     </h2>
-                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                    <div id="collapseTwoo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
                             In CSS box model is used when talking about design and layout. The CSS box model is
