--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                 <img src="/edTech-website-main/images/cover/cover-1.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5 class="fs-1">Get Started Digital Learning.</h5>
-                    <p>It is a long stablished fact that a reader will be distracted by the readable comnent of a page
-                        when looking at it's layout.</p>
+                    <p>This course is intended for those who want to work as a Web Developer. This course covers Web
+                        development process in details.</p>
                     <button type="button" class="btn btn-primary">Get Started</button>
                 </div>
             </div>
@@ -73,16 +73,18 @@
                 <img src="/edTech-website-main/images/cover/cover-2.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Second slide label</h5>
-                    <p>It is a long stablished fact that a reader will be distracted by the readable comnent of a page
-                        when looking at it's layout.</p>
+                    <p>Get Started Digital Learning.</h5>
+                    <p>This course is intended for those who want to work as a Web Developer. This course covers Web
+                        development process in details.</p>
                 </div>
             </div>
             <div class="carousel-item">
                 <img src="/edTech-website-main/images/cover/cover-3.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Third slide label</h5>
-                    <p>It is a long stablished fact that a reader will be distracted by the readable comnent of a page
-                        when looking at it's layout.</p>
+                    <p>Get Started Digital Learning.</h5>
+                    <p>This course is intended for those who want to work as a Web Developer. This course covers Web
+                        development process in details.</p>
                 </div>
             </div>
         </div>
@@ -102,9 +104,9 @@
     <div class="discovertext">
         <h2 class="text-center fw-bold">Discover Our Popular</h2>
         <h2 class="text-center fw-bold">Courses</h2>
-        <p class="text-center text-black-50 fw-bold">It is a long stablished fact that a reader will be distracted by
-            the readable comnent of a page
-            when looking at it's layout.</p>
+        <p class="text-center text-black-50 fw-bold">This Web Development Specialist course is an intensive hands-on
+            course is designed to provide web developers with an in-depth understanding of the web development process
+            and life cycle.</p>
     </div>
     <!-- Card TAG -->
     <!-- <div class="container text-center"> -->
@@ -119,8 +121,9 @@
                     <div class="col-md-8">
                         <div class="card-body">
                             <h5 class="card-title">Fundamental of UI/UX Design</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
+                            <p class="card-text">The five main principles of UX design. There are: <strong>Empathy,
+                                    strategy, usability, inclusivity, and
+                                    validation.</strong></p>
                             <p class="card-text"><small class="text-primary fw-bold">Price: $20</small></p>
                         </div>
                     </div>
@@ -135,8 +138,8 @@
                     <div class="col-md-8">
                         <div class="card-body">
                             <h5 class="card-title">Javascript basic to advanced</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
+                            <p class="card-text">ake your skills to a new level and join millions of users that have
+                                learned <strong>Javascript.</strong> Upgrade Your Career Today.</p>
                             <p class="card-text"><small class="text-primary fw-bold">Price: $20</small></p>
                         </div>
                     </div>
@@ -153,8 +156,8 @@
                     <div class="col-md-8">
                         <div class="card-body">
                             <h5 class="card-title">Fullstack Web Development</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
+                            <p class="card-text">A full stack web developer is <strong>a person who can develop both
+                                    client and server software.</strong> Here you can expolre it.</p>
                             <p class="card-text"><small class="text-primary fw-bold">Price: $20</small></p>
                         </div>
                     </div>
@@ -169,8 +172,9 @@
                     <div class="col-md-8">
                         <div class="card-body">
                             <h5 class="card-title">Digital Marketing</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
+                            <p class="card-text">Digital marketing is <strong>the
+                                    promotion of brands to connect with potential customers using the internet</strong>
+                            </p>
                             <p class="card-text"><small class="text-primary fw-bold">Price: $20</small></p>
                         </div>
                     </div>
@@ -186,9 +190,9 @@
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
-                            <h5 class="card-title">Digital Marketing</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
+                            <h5 class="card-title">Photography Basic Rules</h5>
+                            <p class="card-text">TOP 6 PHOTOGRAPHY COMPOSITION <strong>RULES</strong> we will explore
+                                here.</p>
                             <p class="card-text"><small class="text-primary fw-bold">Price: $20</small></p>
                         </div>
                     </div>
@@ -203,8 +207,9 @@
                     <div class="col-md-8">
                         <div class="card-body">
                             <h5 class="card-title">Motion Graphics</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
+                            <p class="card-text">Motion graphics are pieces of animationwhich create the illusion of
+                                motion and are usually combined with audio.
+                            </p>
                             <p class="card-text"><small class=" text-primary fw-bold">Price: $20</small></p>
                         </div>
                     </div>
@@ -338,7 +343,7 @@
     </div>
     <!-- Trusted Companies -->
     <div class="trusted-companies container mb-5 mt-3 container" md-5>
-        <h1 class="text-center">Trusted By Over 800+ Compnies</h1>
+        <h1 class="text-center1 text-center">Trusted By Over 800+ Compnies</h1>
         <div class="d-flex justify-content-around banner">
             <img src="/edTech-website-main/images/company/company-1.png" class="rounded float-start" alt="...">
             <img src="/edTech-website-main/images/company/company-2.png" class="rounded float-end" alt="...">
@@ -352,7 +357,7 @@
     <!-- footer -->
     <footer class="container">
         <div class="footerText">
-            <h1>Pro Edu</h1>
+            <h1>Digital Learning</h1>
             <p>Office 41, Zawaya Buldin, Ghala Muscar</p>
             <p>Sultanate of Oman</p>
             <p>Privacy Policy | Terms of use</p>
