--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 
     <!-- Freequently Asked Questions -->
     <div class="discovertext container">
-        <h2 class="text-center fw-bold">FFrequently Asked Questions</h2>
+        <h2 class="text-center fw-bold">Frequently Asked Questions</h2>
         <div class="text-center">
             <div>
                 <small class="text-center text-black-50 fw-bold">All relative questions are here</small>
