--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="/edTech-website-main/images/cover/cover-1.png" class="d-block w-100" alt="...">
+                <img src="/cover/cover-1.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5 class="fs-1">Get Started Digital Learning.</h5>
                     <p>This course is intended for those who want to work as a Web Developer. This course covers Web
@@ -70,7 +70,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/edTech-website-main/images/cover/cover-2.jpg" class="d-block w-100" alt="...">
+                <img src="/cover/cover-2.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Second slide label</h5>
                     <p>Get Started Digital Learning.</h5>
@@ -79,7 +79,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="/edTech-website-main/images/cover/cover-3.jpg" class="d-block w-100" alt="...">
+                <img src="/cover/cover-3.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Third slide label</h5>
                     <p>Get Started Digital Learning.</h5>
@@ -115,8 +115,7 @@
             <div class="card mb-3" style="max-width: 540px;">
                 <div class="row g-3">
                     <div class="col-md-4">
-                        <img src="/edTech-website-main/images/course/course-1.png" class="img-fluid rounded-start"
-                            alt="...">
+                        <img src="/course/course-1.png" class="img-fluid rounded-start" alt="...">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
@@ -132,8 +131,7 @@
             <div class="card mb-3" style="max-width: 540px;">
                 <div class="row g-3">
                     <div class="col-md-4">
-                        <img src="/edTech-website-main/images/course/course-2.png" class="img-fluid rounded-start"
-                            alt="...">
+                        <img src="/course/course-2.png" class="img-fluid rounded-start" alt="...">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
@@ -150,8 +148,7 @@
             <div class="card mb-3" style="max-width: 540px;">
                 <div class="row g-3">
                     <div class="col-md-4">
-                        <img src="/edTech-website-main/images/course/course-3.png" class="img-fluid rounded-start"
-                            alt="...">
+                        <img src="/course/course-3.png" class="img-fluid rounded-start" alt="...">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
@@ -166,8 +163,7 @@
             <div class="card mb-3" style="max-width: 540px;">
                 <div class="row g-3">
                     <div class="col-md-4">
-                        <img src="/edTech-website-main/images/course/course-4.png" class="img-fluid rounded-start"
-                            alt="...">
+                        <img src="/course/course-4.png" class="img-fluid rounded-start" alt="...">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
@@ -185,8 +181,7 @@
             <div class="card mb-3" style="max-width: 540px;">
                 <div class="row g-3">
                     <div class="col-md-4">
-                        <img src="./edTech-website-main//images/course//course-5.png" class="img-fluid rounded-start"
-                            alt="...">
+                        <img src="/course/course-5.png" class="img-fluid rounded-start" alt="...">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
@@ -201,8 +196,7 @@
             <div class="card mb-3" style="max-width: 540px;">
                 <div class="row g-3">
                     <div class="col-md-4">
-                        <img src="/edTech-website-main/images/course/course-6.png" class="img-fluid rounded-start"
-                            alt="...">
+                        <img src="/course/course-6.png" class="img-fluid rounded-start" alt="...">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
@@ -345,12 +339,12 @@
     <div class="trusted-companies container mb-5 mt-3 container" md-5>
         <h1 class="text-center1 text-center">Trusted By Over 800+ Compnies</h1>
         <div class="d-flex justify-content-around banner">
-            <img src="/edTech-website-main/images/company/company-1.png" class="rounded float-start" alt="...">
-            <img src="/edTech-website-main/images/company/company-2.png" class="rounded float-end" alt="...">
-            <img src="/edTech-website-main/images/company/company-3.png" class="rounded float-start" alt="...">
-            <img src="/edTech-website-main/images/company/company-4.png" class="rounded float-end" alt="...">
-            <img src="/edTech-website-main/images/company/company-5.png" class="rounded float-start" alt="...">
-            <img src="/edTech-website-main/images/company/company-6.png" class="rounded float-end" alt="...">
+            <img src="/company/company-1.png" class="rounded float-start" alt="...">
+            <img src="/company/company-2.png" class="rounded float-end" alt="...">
+            <img src="/company/company-3.png" class="rounded float-start" alt="...">
+            <img src="/company/company-4.png" class="rounded float-end" alt="...">
+            <img src="/company/company-5.png" class="rounded float-start" alt="...">
+            <img src="/company/company-6.png" class="rounded float-end" alt="...">
         </div>
     </div>
 
